--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js" integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ==" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.1/howler.js" integrity="sha512-J+vDCDlH9TYo4uL0R5g9TCvJj8oGATXWi17AcOyUhuyEbJf0SF5HSmKv1gwPCEowauPanV0RAaYjyU+kbowtQg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.16.1/build/matter.min.js"></script>
-    <script src="public/javascripts/Wall.js"></script>
-    <script src="public/javascripts/util.js"></script>
-    <script src="public/javascripts/Ray.js"></script>
-    <script src="public/javascripts/Boundary.js"></script>
-    <script src="public/javascripts/Particle1.js"></script>
-    <script src="public/javascripts/Particle2.js"></script>
-    <script src="public/javascripts/Particle3.js"></script>
-    <script src="public/javascripts/Particle4.js"></script>
-    <script src="public/javascripts/Particle5.js"></script>
-    <script src="public/javascripts/Particle6.js"></script>
-    <script src="public/javascripts/Particle7.js"></script>
-    <script src="public/javascripts/Particle8.js"></script>
+    <script src="/public/javascripts/Wall.js"></script>
+    <script src="/public/javascripts/util.js"></script>
+    <script src="/public/javascripts/Ray.js"></script>
+    <script src="/public/javascripts/Boundary.js"></script>
+    <script src="/public/javascripts/Particle1.js"></script>
+    <script src="/public/javascripts/Particle2.js"></script>
+    <script src="/public/javascripts/Particle3.js"></script>
+    <script src="/public/javascripts/Particle4.js"></script>
+    <script src="/public/javascripts/Particle5.js"></script>
+    <script src="/public/javascripts/Particle6.js"></script>
+    <script src="/public/javascripts/Particle7.js"></script>
+    <script src="/public/javascripts/Particle8.js"></script>
       <script src="public/javascripts/Waypoints.js"></script>
-    <script src="public/javascripts/sketch.js"></script>
+    <script src="/public/javascripts/sketch.js"></script>
    <!-- <script src="/javascripts/3D.js"></script> -->
   </head>
   <body style="text-align: center;">
