--- a/index.html
+++ b/index.html
@@ -2,32 +2,40 @@
 <html lang="en">
   <head>
       <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LiFi</title>
+    <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.3.1/p5.min.js" integrity="sha512-gQVBYBvfC+uyor5Teonjr9nmY1bN+DlOCezkhzg4ShpC5q81ogvFsr5IV4xXAj6HEtG7M1Pb2JCha97tVFItYQ==" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.1/howler.js" integrity="sha512-J+vDCDlH9TYo4uL0R5g9TCvJj8oGATXWi17AcOyUhuyEbJf0SF5HSmKv1gwPCEowauPanV0RAaYjyU+kbowtQg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/matter-js@0.16.1/build/matter.min.js"></script>
-    <script src="/public/javascripts/Wall.js"></script>
-    <script src="/public/javascripts/util.js"></script>
-    <script src="/public/javascripts/Ray.js"></script>
-    <script src="/public/javascripts/Boundary.js"></script>
-    <script src="/public/javascripts/Particle1.js"></script>
-    <script src="/public/javascripts/Particle2.js"></script>
-    <script src="/public/javascripts/Particle3.js"></script>
-    <script src="/public/javascripts/Particle4.js"></script>
-    <script src="/public/javascripts/Particle5.js"></script>
-    <script src="/public/javascripts/Particle6.js"></script>
-    <script src="/public/javascripts/Particle7.js"></script>
-    <script src="/public/javascripts/Particle8.js"></script>
-      <script src="public/javascripts/Waypoints.js"></script>
-    <script src="/public/javascripts/sketch.js"></script>
+    <script src="/javascripts/Wall.js"></script>
+    <script src="/javascripts/util.js"></script>
+    <script src="/javascripts/Ray.js"></script>
+    <script src="/javascripts/Boundary.js"></script>
+    <script src="/javascripts/Particle1.js"></script>
+    <script src="/javascripts/Particle2.js"></script>
+    <script src="/javascripts/Particle3.js"></script>
+    <script src="/javascripts/Particle4.js"></script>
+    <script src="/javascripts/Particle5.js"></script>
+    <script src="/javascripts/Particle6.js"></script>
+    <script src="/javascripts/Particle7.js"></script>
+    <script src="/javascripts/Particle8.js"></script>
+      <script src="/javascripts/Waypoints.js"></script>
+    <script src="/javascripts/sketch.js"></script>
    <!-- <script src="/javascripts/3D.js"></script> -->
   </head>
   <body style="text-align: center;">
 
 
     <h1>Your ID is:<div id="id"></div></h1>
-    <h2>Please Paste your </h2>
+
+    <form
+  method="post"
+  action="https://sheetdb.io/api/v1/q7k8exycrt2hc">
+    <input type="hidden" name="data[id]" id="user" value="0">
+    <input type="hidden" name="data[key]" id="key" value="1">
+    <input type="hidden" name="data[hash]" id="hash" value="2">
+    <button type="submit">Submit</button>
+</form>
   <h3>Collect Items in Desending Order &#x2B07; <br> Press Enter to for 3D audio pulse</h3>
   <ol style="margin:auto; width:50px; margin-bottom:20px">
   <li>Coffee</li>
@@ -232,6 +240,65 @@
   </svg>
   <h5 id="ip8"></h5>
 </div>
+<script>
 
+
+
+let signature =[];
+
+
+function getMessageEncoding() {
+  let message = document.getElementById("id")
+  console.log(message.value)
+  let enc = new TextEncoder();
+  return enc.encode(message);
+}
+
+
+function signMessage(key) {
+
+  let encoded = getMessageEncoding();
+  signature.push( window.crypto.subtle.sign(
+    "HMAC",
+    key,
+    encoded
+  ))
+  
+
+}
+
+
+// function verifyMessage(key) {
+  
+//   let encoded = getMessageEncoding();
+//   let result =  window.crypto.subtle.verify(
+//     "HMAC",
+//     key,
+//     signature[0],
+//     encoded
+//   );
+
+// }
+
+
+
+window.crypto.subtle.generateKey(
+  {
+    name: "HMAC",
+    hash: {name: "SHA-512"}
+  },
+  true,
+  ["sign", "verify"]
+).then((key) => {
+
+    signMessage(key);
+  
+
+ 
+
+});
+
+
+</script>
   </body>
 </html>
